fix: use consistent width for jump to box

--- a/src/components/card-list/card-list.module.css
+++ b/src/components/card-list/card-list.module.css
@@ -18,6 +18,10 @@
   }
 }
 
+.nav-jump {
+  width: min(12rem, 33.333%);
+}
+
 .scroller {
   flex: 1 1 auto;
   border-top: 1px solid transparent;
